feat: static native transport
- feat: implement override modules for native transport
- feat: implement native build for transport libs
- feat: swap for transport v2 in feature and native `runtime` build
- feat: working static jni

Signed-off-by: Sam Gammon <sam@elide.ventures>